项目第二项完成：新增微信消息首页，实现点击消息跳转至消息聊天页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
-    <string name="app_name">微信聊天界面</string>
-    <string name="topwenzi">19移动互联网</string>
+    <string name="topwenzi">19移动总群</string>
     <string name="todo">TODO</string>
     <string name="introduce">• • •</string>
+    <string name="app_name">微信</string>
+    <string name="fruitName">fruitName</string>
+    <string name="fruitTiding">fruitTiding</string>
+    <string name="fruitTime">fruitTime</string>
+    <string name="WeChat1">WeChat</string>
+    <string name="WeChat">微信</string>
+    <string name="lianxi">联系人</string>
+    <string name="通讯">通讯录</string>
+    <string name="faxian">发现</string>
+    <string name="wo">我</string>
 </resources>
